# wincursorgen

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: args.rs  arguments.rs  cursor_config_parsing.rs  lib.rs  main.rs  processing.rs
tests/: create_static_cursor.sh
tests/configs/: animated-test-cursor.in  test-cursor.in
