[package]
name = "wincursorgen"
version = "1.0.0"
description = "A program to convert series of PNGs into windows cursor files."
categories = ["command-line-utilities", "graphics", "rendering"]
keywords = ["cur", "ani", "cursor", "generator", "xcursorgen"]
license = "MIT"
license-file = "LICENSE"
authors = ["Mark Pokhil <vfhr.afr@gmail.com>"]
repository = "https://github.com/poormark/wincursorgen"
edition = "2018"
exclude = ["tests"]

[dependencies]
riff-ani = "0.1.0"
argh = "0.1.4"
path-clean = "0.1.0"
